Add file input file accept

--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -257,6 +257,7 @@
                                 <div class="input-file">
                                     <input
                                             type="file"
+                                            accept=".pdf"
                                             #fileInput
                                             style="display: none"
                                             (change)="handleFileInputChange(fileInput)"
