--- a/src/app/features/post-login/issue/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.html
@@ -195,6 +195,7 @@
               <div class="input-file">
                 <input
                   type="file"
+                  accept=".pdf"
                   #fileInput_1
                   style="display: none"
                   (change)="handleFileInputChange(fileInput_1, 1)"
@@ -313,6 +314,7 @@
               <div class="input-file">
                 <input
                   type="file"
+                  accept=".pdf"
                   #fileInput_2
                   style="display: none"
                   (change)="handleFileInputChange(fileInput_2, 2)"
@@ -431,6 +433,7 @@
               <div class="input-file">
                 <input
                   type="file"
+                  accept=".pdf"
                   #fileInput_3
                   style="display: none"
                   (change)="handleFileInputChange(fileInput_3, 3)"
