--- a/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
@@ -177,6 +177,7 @@
               <div class="input-file">
                 <input
                   type="file"
+                  accept=".pdf"
                   #fileInput
                   style="display: none"
                   (change)="handleFileInputChange(fileInput)"
