--- a/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
+++ b/src/app/features/post-login/inspection/record/record-detail/record-detail.component.html
@@ -106,6 +106,7 @@
               <div class="input-file">
                 <input
                   type="file"
+                  accept=".pdf"
                   #fileInput
                   style="display: none"
                   (change)="handleFileInputChange(fileInput)"
