--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -1,264 +1,292 @@
-<h5 class="mat-headline-5 fw-medium">Danh sách văn bản bổ sung</h5>
-<div class="table-container">
-  <div
-    class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
-  >
-    <div class="form-group col-md-6" *ngIf="!advanceSearch">
-      <span class="p-input-icon-left search-with-icon w-100">
-        <i class="bi bi-search"></i>
-        <input
-          type="text"
-          name="globalSearch"
-          id="globalSearch"
-          class="w-100 fw-medium"
-          [(ngModel)]="globalSearch"
-          (keyup)="loadGuidanceDocuments()"
-          pInputText
-          placeholder="Tra cứu nhanh theo tiêu đề hoặc người tạo"
-        />
-      </span>
-    </div>
-    <div *ngIf="advanceSearch" class="col-md-10">
-      <div class="row">
-        <div class="col-md-6">
-          <label class="fw-medium">Tiêu đề</label>
+<div class="container-fluid">
+  <h5 class="mat-headline-5 fw-medium">Danh sách văn bản bổ sung</h5>
+  <div class="table-container">
+    <div
+      class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
+    >
+      <div class="form-group col-md-6" *ngIf="!advanceSearch">
+        <span class="p-input-icon-left search-with-icon w-100">
+          <i class="bi bi-search"></i>
           <input
-            class="form-control"
-            [(ngModel)]="guidanceDocumentName"
-            name="guidanceDocumentName"
-            id="guidanceDocumentName"
+            type="text"
+            name="globalSearch"
+            id="globalSearch"
+            class="w-100 fw-medium"
+            [(ngModel)]="globalSearch"
             (keyup)="loadGuidanceDocuments()"
-            placeholder="(VD): Kế hoạch PCCC"
             pInputText
+            placeholder="Tra cứu nhanh theo tiêu đề hoặc người tạo"
           />
-        </div>
-        <div class="col-md-6">
-          <label class="fw-medium">Kế hoạch</label>
-          <p-dropdown class="full-width-dropdown" [options]="issueDropDowns" dataKey="issueId"
-                      [(ngModel)]="currentIssueSelected"    optionLabel="issueName"
-                      [filter]="true" filterBy="issueName" optionValue="issueId" [showClear]="true"
-                      (onChange)="loadGuidanceDocuments()"
-                      placeholder="Chọn 1 kế hoạch thanh tra"
-          >
-          </p-dropdown>
-        </div>
+        </span>
       </div>
-    </div>
-    <div
-      class="text-end justify-content-end"
-      [ngClass]="{
-        'col-md-2 d-flex align-items-end': advanceSearch,
-        'col-md-3 ': !advanceSearch
-      }"
-    >
-      <button (click)="onAdvanceSearch()" pButton>
-        {{ advanceSearchButtonText }}
-      </button>
-    </div>
-    <div *ngIf="advanceSearch" class="col-md-10 mt-2">
-      <div class="row">
-        <div class="col-md-6">
-          <label class="fw-medium">Khoảng thời gian tạo</label>
-          <tui-input-date-range
-            class="tui-date"
-            tuiTextfieldSize="m"
-            [(ngModel)]="createDateRange"
-            (ngModelChange)="changeStartDate()"
-
-          >
-          </tui-input-date-range>
-        </div>
-        <div class="col-md-6">
-          <label class="fw-medium">Người tạo</label>
-          <input
-            class="form-control"
-            [(ngModel)]="fullName"
-            name="fullName"
-            id="fullName"
-            (keyup)="loadGuidanceDocuments()"
-            placeholder="(VD): Trần Lê Hải"
-            pInputText
-          />
-        </div>
-      </div>
-    </div>
-    <div
-      *ngIf="advanceSearch"
-      class="d-flex justify-content-end align-items-center col-md-2"
-    >
-      <button pButton class="reset-button" (click)="reset()">Đặt lại</button>
-    </div>
-    <div
-      class="col-md-12 d-flex flex-row justify-content-end align-items-center mt-2"
-    >
-      <button
-        pButton
-        (click)="onCreateGuidanceDocument()"
-        *ngIf="isDirector || isViceDirector"
-        [disabled]="!issue || issue.status?.statusId == 4 "
-      >
-        Tạo mới
-      </button>
-    </div>
-  </div>
-  <div class="table-content">
-    <table class="table p-2 table-hover align-middle">
-      <thead>
-        <tr>
-          <th (click)="onSort('guidanceDocumentId')">
-            <div class="header-container" [class.table-header-sort]="sortBy == 'guidanceDocumentId'">
-              <label class="icon-text me-1">Mã</label>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
-                  sortBy === 'guidanceDocumentId' && sortDirection === 'asc'
-                "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
-                  sortBy === 'guidanceDocumentId' && sortDirection === 'desc'
-                "
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('guidanceDocumentName')">
-            <div class="header-container" [class.table-header-sort]="sortBy == 'guidanceDocumentName'">
-              <label class="icon-text me-1">Tiêu đề</label>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
-                  sortBy === 'guidanceDocumentName' && sortDirection === 'asc'
-                "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
-                  sortBy === 'guidanceDocumentName' && sortDirection === 'desc'
-                "
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('issue.createdDate')">
-            <div class="header-container" [class.table-header-sort]="sortBy == 'issue.createdDate'">
-              <label class="icon-text me-1">Kế hoạch kiểm tra</label>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
-                  sortBy === 'issue.createdDate' && sortDirection === 'asc'
-                "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
-                  sortBy === 'issue.createdDate' && sortDirection === 'desc'
-                "
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('createdDate')">
-            <div class="header-container" [class.table-header-sort]="sortBy == 'createdDate'">
-              <label class="icon-text me-1">Ngày tạo</label>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="sortBy === 'createdDate' && sortDirection === 'asc'"
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="sortBy === 'createdDate' && sortDirection === 'desc'"
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('account.user.fullName')">
-            <div class="header-container" [class.table-header-sort]="sortBy == 'account.user.fullName'">
-              <label class="icon-text me-1">Người tạo</label>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
-                  sortBy === 'account.user.fullName' && sortDirection === 'asc'
-                "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
-                  sortBy === 'account.user.fullName' && sortDirection === 'desc'
-                "
-              ></i>
-            </div>
-          </th>
-          <th></th>
-        </tr>
-        <tr  *ngIf="allGuidanceDocument == 0"
-          >
-          <td colspan="6">
-            <p class="w-100 text-center mt-4 fw-medium fs-4">Không tìm thấy văn bản phù hợp</p>
-          </td>
-        </tr
-        >
-      </thead>
-      <tbody *ngIf="guidanceDocuments.length > 0">
-        <tr
-          *ngFor="
-            let doc of guidanceDocuments
-              | paginate
-                : {
-                    itemsPerPage: pageSize,
-                    currentPage: pageNo,
-                    totalItems: allGuidanceDocument
-                  };
-            let i = index
-          "
-        >
-          <td class="py-4 px-2">{{ doc.guidanceDocumentId }}</td>
-          <td
-            class="py-4 px-2"
-            pTooltip="{{ doc.guidanceDocumentName }}"
-            tooltipPosition="top"
-          >
-            {{ doc.guidanceDocumentName }}
-          </td>
-          <td class="py-4 px-2">{{ doc.issueDto?.issueName }}</td>
-          <td class="py-4 px-2">{{ doc.createdDate | date : "dd/MM/yyyy" }}</td>
-          <td class="py-4 px-2">{{ doc.accountDto?.user?.fullName }}</td>
-          <td class="py-4 px-2">
-            <button
-              class="action-button"
-              type="button"
-              pTooltip="Chi tiết"
-              tooltipPosition="top"
-              (click)="onDetail(doc.guidanceDocumentId)"
+      <div *ngIf="advanceSearch" class="col-md-10">
+        <div class="row">
+          <div class="col-md-6">
+            <label class="fw-medium">Tiêu đề</label>
+            <input
+              class="form-control"
+              [(ngModel)]="guidanceDocumentName"
+              name="guidanceDocumentName"
+              id="guidanceDocumentName"
+              (keyup)="loadGuidanceDocuments()"
+              placeholder="(VD): Kế hoạch PCCC"
+              pInputText
+            />
+          </div>
+          <div class="col-md-6">
+            <label class="fw-medium">Kế hoạch</label>
+            <p-dropdown
+              class="full-width-dropdown"
+              [options]="issueDropDowns"
+              dataKey="issueId"
+              [(ngModel)]="currentIssueSelected"
+              optionLabel="issueName"
+              [filter]="true"
+              filterBy="issueName"
+              optionValue="issueId"
+              [showClear]="true"
+              (onChange)="loadGuidanceDocuments()"
+              placeholder="Chọn 1 kế hoạch thanh tra"
             >
-              <i class="bi bi-info-circle-fill"></i>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="d-flex justify-content-center table-footer">
-      <div class="me-3 mt-3" *ngIf="guidanceDocuments.length > 0">
-        <pagination-controls
-          previousLabel=""
-          nextLabel=""
-          (pageChange)="[onTableDataChange($event), maxPageOnKeyUp()]"
-        >
-        </pagination-controls>
+            </p-dropdown>
+          </div>
+        </div>
       </div>
       <div
-        class="d-flex justify-content-center align-items-center"
-        *ngIf="guidanceDocuments.length > 0"
+        class="text-end justify-content-end"
+        [ngClass]="{
+          'col-md-2 d-flex align-items-end': advanceSearch,
+          'col-md-3 ': !advanceSearch
+        }"
       >
-        <select
-          (change)="changePageSize()"
-          class="form-select ng-untouched ng-pristine ng-valid"
-          [(ngModel)]="pageSize"
+        <button (click)="onAdvanceSearch()" pButton>
+          {{ advanceSearchButtonText }}
+        </button>
+      </div>
+      <div *ngIf="advanceSearch" class="col-md-10 mt-2">
+        <div class="row">
+          <div class="col-md-6">
+            <label class="fw-medium">Khoảng thời gian tạo</label>
+            <tui-input-date-range
+              class="tui-date"
+              tuiTextfieldSize="m"
+              [(ngModel)]="createDateRange"
+              (ngModelChange)="changeStartDate()"
+            >
+            </tui-input-date-range>
+          </div>
+          <div class="col-md-6">
+            <label class="fw-medium">Người tạo</label>
+            <input
+              class="form-control"
+              [(ngModel)]="fullName"
+              name="fullName"
+              id="fullName"
+              (keyup)="loadGuidanceDocuments()"
+              placeholder="(VD): Trần Lê Hải"
+              pInputText
+            />
+          </div>
+        </div>
+      </div>
+      <div
+        *ngIf="advanceSearch"
+        class="d-flex justify-content-end align-items-center col-md-2"
+      >
+        <button pButton class="reset-button" (click)="reset()">Đặt lại</button>
+      </div>
+      <div
+        class="col-md-12 d-flex flex-row justify-content-end align-items-center mt-2"
+      >
+        <button
+          pButton
+          (click)="onCreateGuidanceDocument()"
+          *ngIf="isDirector || isViceDirector"
+          [disabled]="!issue || issue.status?.statusId == 4"
         >
-          <option *ngFor="let option of recordPerPageOption" [value]="option">
-            {{ option }}
-          </option>
-        </select>
+          Tạo mới
+        </button>
       </div>
     </div>
-    <p-toast key="paging" position="bottom-right"></p-toast>
-    <p-toast key="issueId" position="top-right"></p-toast>
+    <div class="table-content">
+      <table class="table p-2 table-hover align-middle">
+        <thead>
+          <tr>
+            <th (click)="onSort('guidanceDocumentId')">
+              <div
+                class="header-container"
+                [class.table-header-sort]="sortBy == 'guidanceDocumentId'"
+              >
+                <label class="icon-text me-1">Mã</label>
+                <i
+                  class="bi bi-sort-up"
+                  *ngIf="
+                    sortBy === 'guidanceDocumentId' && sortDirection === 'asc'
+                  "
+                ></i>
+                <i
+                  class="bi bi-sort-down"
+                  *ngIf="
+                    sortBy === 'guidanceDocumentId' && sortDirection === 'desc'
+                  "
+                ></i>
+              </div>
+            </th>
+            <th (click)="onSort('guidanceDocumentName')">
+              <div
+                class="header-container"
+                [class.table-header-sort]="sortBy == 'guidanceDocumentName'"
+              >
+                <label class="icon-text me-1">Tiêu đề</label>
+                <i
+                  class="bi bi-sort-up"
+                  *ngIf="
+                    sortBy === 'guidanceDocumentName' && sortDirection === 'asc'
+                  "
+                ></i>
+                <i
+                  class="bi bi-sort-down"
+                  *ngIf="
+                    sortBy === 'guidanceDocumentName' &&
+                    sortDirection === 'desc'
+                  "
+                ></i>
+              </div>
+            </th>
+            <th (click)="onSort('issue.createdDate')">
+              <div
+                class="header-container"
+                [class.table-header-sort]="sortBy == 'issue.createdDate'"
+              >
+                <label class="icon-text me-1">Kế hoạch kiểm tra</label>
+                <i
+                  class="bi bi-sort-up"
+                  *ngIf="
+                    sortBy === 'issue.createdDate' && sortDirection === 'asc'
+                  "
+                ></i>
+                <i
+                  class="bi bi-sort-down"
+                  *ngIf="
+                    sortBy === 'issue.createdDate' && sortDirection === 'desc'
+                  "
+                ></i>
+              </div>
+            </th>
+            <th (click)="onSort('createdDate')">
+              <div
+                class="header-container"
+                [class.table-header-sort]="sortBy == 'createdDate'"
+              >
+                <label class="icon-text me-1">Ngày tạo</label>
+                <i
+                  class="bi bi-sort-up"
+                  *ngIf="sortBy === 'createdDate' && sortDirection === 'asc'"
+                ></i>
+                <i
+                  class="bi bi-sort-down"
+                  *ngIf="sortBy === 'createdDate' && sortDirection === 'desc'"
+                ></i>
+              </div>
+            </th>
+            <th (click)="onSort('account.user.fullName')">
+              <div
+                class="header-container"
+                [class.table-header-sort]="sortBy == 'account.user.fullName'"
+              >
+                <label class="icon-text me-1">Người tạo</label>
+                <i
+                  class="bi bi-sort-up"
+                  *ngIf="
+                    sortBy === 'account.user.fullName' &&
+                    sortDirection === 'asc'
+                  "
+                ></i>
+                <i
+                  class="bi bi-sort-down"
+                  *ngIf="
+                    sortBy === 'account.user.fullName' &&
+                    sortDirection === 'desc'
+                  "
+                ></i>
+              </div>
+            </th>
+            <th></th>
+          </tr>
+          <tr *ngIf="allGuidanceDocument == 0">
+            <td colspan="6">
+              <p class="w-100 text-center mt-4 fw-medium fs-4">
+                Không tìm thấy văn bản phù hợp
+              </p>
+            </td>
+          </tr>
+        </thead>
+        <tbody *ngIf="guidanceDocuments.length > 0">
+          <tr
+            *ngFor="
+              let doc of guidanceDocuments
+                | paginate
+                  : {
+                      itemsPerPage: pageSize,
+                      currentPage: pageNo,
+                      totalItems: allGuidanceDocument
+                    };
+              let i = index
+            "
+          >
+            <td class="py-4 px-2">{{ doc.guidanceDocumentId }}</td>
+            <td
+              class="py-4 px-2"
+              pTooltip="{{ doc.guidanceDocumentName }}"
+              tooltipPosition="top"
+            >
+              {{ doc.guidanceDocumentName }}
+            </td>
+            <td class="py-4 px-2">{{ doc.issueDto?.issueName }}</td>
+            <td class="py-4 px-2">
+              {{ doc.createdDate | date : "dd/MM/yyyy" }}
+            </td>
+            <td class="py-4 px-2">{{ doc.accountDto?.user?.fullName }}</td>
+            <td class="py-4 px-2">
+              <button
+                class="action-button"
+                type="button"
+                pTooltip="Chi tiết"
+                tooltipPosition="top"
+                (click)="onDetail(doc.guidanceDocumentId)"
+              >
+                <i class="bi bi-info-circle-fill"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="d-flex justify-content-center table-footer">
+        <div class="me-3 mt-3" *ngIf="guidanceDocuments.length > 0">
+          <pagination-controls
+            previousLabel=""
+            nextLabel=""
+            (pageChange)="[onTableDataChange($event), maxPageOnKeyUp()]"
+          >
+          </pagination-controls>
+        </div>
+        <div
+          class="d-flex justify-content-center align-items-center"
+          *ngIf="guidanceDocuments.length > 0"
+        >
+          <select
+            (change)="changePageSize()"
+            class="form-select ng-untouched ng-pristine ng-valid"
+            [(ngModel)]="pageSize"
+          >
+            <option *ngFor="let option of recordPerPageOption" [value]="option">
+              {{ option }}
+            </option>
+          </select>
+        </div>
+      </div>
+      <p-toast key="paging" position="bottom-right"></p-toast>
+      <p-toast key="issueId" position="top-right"></p-toast>
+    </div>
   </div>
 </div>
