--- a/src/app/features/post-login/issue/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue/issue-list/issue-list.component.html
@@ -1,258 +1,262 @@
-<h5 class="mat-headline-5 fw-medium">Danh sách kế hoạch kiểm tra năm học</h5>
-<ng-container *ngIf="issues">
-  <div class="card">
-    <p-table
-      #dt
-      [value]="issues"
-      dataKey="id"
-      [rowHover]="true"
-      [rows]="5"
-      [showCurrentPageReport]="true"
-      [rowsPerPageOptions]="[5, 10, 15]"
-      [paginator]="true"
-      currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
-      [filterDelay]="0"
-      [globalFilterFields]="['issueName', 'account.user.fullName']"
-    >
-      <ng-template pTemplate="caption">
-        <div class="table-header">
-          <div>
-            <span
-              class="p-input-icon-left search-with-icon"
-              *ngIf="!filterVisible"
-            >
-              <i class="bi bi-search"></i>
-              <input
-                pInputText
-                type="text"
-                (input)="dt.filterGlobal($any($event.target).value, 'contains')"
-                placeholder="Tìm kiếm theo tên kế hoạch, tên người đăng"
-              />
-            </span>
-            <div class="d-flex" *ngIf="filterVisible">
-              <div>
-                <p-columnFilter
-                  type="text"
-                  field="issueName"
-                  pTooltip="(VD): Kế hoạch năm hoạch năm 2022 - 2023"
-                  tooltipPosition="top"
-                  placeholder="Tên kế hoạch"
-                ></p-columnFilter>
-              </div>
-              <div>
-                <p-columnFilter
-                  type="text"
-                  field="account.user.fullName"
-                  pTooltip="(VD): Nguyễn Văn A"
-                  tooltipPosition="top"
-                  placeholder="Tên người đăng"
-                ></p-columnFilter>
-              </div>
-              <!-- <th>
-                  <p-columnFilter
-                    type="date"
-                    field="createdDate"
-                    pTooltip="(VD): 1/1/2022"
-                    tooltipPosition="top"
-                    placeholder="Ngày đăng"
-                  ></p-columnFilter>
-                </th> -->
-              <!-- <div>
-                <p-columnFilter
-                  type="numeric"
-                  field="inspectorGroupSize"
-                  tooltipPosition="top"
-                ></p-columnFilter>
-              </div> -->
-              <div>
-                <p-columnFilter
-                  field="isActive"
-                  matchMode="equals"
-                  [showMenu]="false"
-                >
-                  <ng-template
-                    pTemplate="filter"
-                    let-value
-                    let-filter="filterCallback"
-                  >
-                    <p-dropdown
-                      [ngModel]="value"
-                      [options]="statuses"
-                      (onChange)="filter($event.value)"
-                      placeholder="Trạng thái"
-                      [showClear]="true"
-                    >
-                      <ng-template let-option pTemplate="item">
-                        <p-tag
-                          class="status"
-                          [severity]="option.value ? 'success' : 'danger'"
-                          [rounded]="true"
-                        >
-                          {{ option.label }}
-                        </p-tag>
-                      </ng-template>
-                    </p-dropdown>
-                  </ng-template>
-                </p-columnFilter>
-              </div>
-            </div>
-          </div>
-          <div>
+<div class="container-fluid">
+  <h5 class="mat-headline-5 fw-medium">Danh sách kế hoạch kiểm tra năm học</h5>
+  <ng-container *ngIf="issues">
+    <div class="card">
+      <p-table
+        #dt
+        [value]="issues"
+        dataKey="id"
+        [rowHover]="true"
+        [rows]="5"
+        [showCurrentPageReport]="true"
+        [rowsPerPageOptions]="[5, 10, 15]"
+        [paginator]="true"
+        currentPageReportTemplate=""
+        [filterDelay]="0"
+        [globalFilterFields]="['issueName', 'account.user.fullName']"
+      >
+        <ng-template pTemplate="caption">
+          <div class="table-header">
             <div>
-              <button
+              <span
+                class="p-input-icon-left search-with-icon"
                 *ngIf="!filterVisible"
-                pButton
-                (click)="changeFilterVisible(true)"
-                class="top-button"
               >
-                Tra cứu nâng cao
-              </button>
-              <button
-                *ngIf="filterVisible"
-                pButton
-                (click)="resetFilter()"
-                class="reset-button"
-              >
-                Đặt lại
-              </button>
-              <button
-                *ngIf="filterVisible"
-                pButton
-                (click)="changeFilterVisible(false)"
-                class="top-button ml-2"
-              >
-                Ẩn tra cứu nâng cao
-              </button>
+                <i class="bi bi-search"></i>
+                <input
+                  pInputText
+                  type="text"
+                  (input)="
+                    dt.filterGlobal($any($event.target).value, 'contains')
+                  "
+                  placeholder="Tìm kiếm theo tên kế hoạch, tên người đăng"
+                />
+              </span>
+              <div class="d-flex" *ngIf="filterVisible">
+                <div>
+                  <p-columnFilter
+                    type="text"
+                    field="issueName"
+                    pTooltip="(VD): Kế hoạch năm hoạch năm 2022 - 2023"
+                    tooltipPosition="top"
+                    placeholder="Tên kế hoạch"
+                  ></p-columnFilter>
+                </div>
+                <div>
+                  <p-columnFilter
+                    type="text"
+                    field="account.user.fullName"
+                    pTooltip="(VD): Nguyễn Văn A"
+                    tooltipPosition="top"
+                    placeholder="Tên người đăng"
+                  ></p-columnFilter>
+                </div>
+                <!-- <th>
+                    <p-columnFilter
+                      type="date"
+                      field="createdDate"
+                      pTooltip="(VD): 1/1/2022"
+                      tooltipPosition="top"
+                      placeholder="Ngày đăng"
+                    ></p-columnFilter>
+                  </th> -->
+                <!-- <div>
+                  <p-columnFilter
+                    type="numeric"
+                    field="inspectorGroupSize"
+                    tooltipPosition="top"
+                  ></p-columnFilter>
+                </div> -->
+                <div>
+                  <p-columnFilter
+                    field="isActive"
+                    matchMode="equals"
+                    [showMenu]="false"
+                  >
+                    <ng-template
+                      pTemplate="filter"
+                      let-value
+                      let-filter="filterCallback"
+                    >
+                      <p-dropdown
+                        [ngModel]="value"
+                        [options]="statuses"
+                        (onChange)="filter($event.value)"
+                        placeholder="Trạng thái"
+                        [showClear]="true"
+                      >
+                        <ng-template let-option pTemplate="item">
+                          <p-tag
+                            class="status"
+                            [severity]="option.value ? 'success' : 'danger'"
+                            [rounded]="true"
+                          >
+                            {{ option.label }}
+                          </p-tag>
+                        </ng-template>
+                      </p-dropdown>
+                    </ng-template>
+                  </p-columnFilter>
+                </div>
+              </div>
             </div>
-            <div class="mt-3 text-end">
-              <button
-                pButton
-                (click)="navigateToCreateIssue()"
-                *ngIf="isDirector"
-                class="top-button"
-                [disabled]="issue && issue.status?.statusId == 3"
-              >
-                Tạo mới
-              </button>
+            <div>
+              <div>
+                <button
+                  *ngIf="!filterVisible"
+                  pButton
+                  (click)="changeFilterVisible(true)"
+                  class="top-button"
+                >
+                  Tra cứu nâng cao
+                </button>
+                <button
+                  *ngIf="filterVisible"
+                  pButton
+                  (click)="resetFilter()"
+                  class="reset-button"
+                >
+                  Đặt lại
+                </button>
+                <button
+                  *ngIf="filterVisible"
+                  pButton
+                  (click)="changeFilterVisible(false)"
+                  class="top-button ml-2"
+                >
+                  Ẩn tra cứu nâng cao
+                </button>
+              </div>
+              <div class="mt-3 text-end">
+                <button
+                  pButton
+                  (click)="navigateToCreateIssue()"
+                  *ngIf="isDirector"
+                  class="top-button"
+                  [disabled]="issue && issue.status?.statusId == 3"
+                >
+                  Tạo mới
+                </button>
+              </div>
             </div>
           </div>
-        </div>
-      </ng-template>
-      <ng-template pTemplate="header">
-        <tr>
-          <th class="th-id">
-            <div>Id</div>
-          </th>
-          <th pSortableColumn="issueName">
-            <div class="d-flex justify-content-between align-items-center">
-              <div>
-                Tên
-                <p-sortIcon field="issueName"></p-sortIcon>
+        </ng-template>
+        <ng-template pTemplate="header">
+          <tr>
+            <th class="th-id">
+              <div>Id</div>
+            </th>
+            <th pSortableColumn="issueName">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  Tên
+                  <p-sortIcon field="issueName"></p-sortIcon>
+                </div>
+                <div></div>
               </div>
-              <div></div>
-            </div>
-          </th>
-          <th pSortableColumn="account.user.fullName" class="td-createdby">
-            <div class="d-flex justify-content-between align-items-center">
-              <div>
-                Người đăng
-                <p-sortIcon field="account.user.fullName"></p-sortIcon>
+            </th>
+            <th pSortableColumn="account.user.fullName" class="td-createdby">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  Người đăng
+                  <p-sortIcon field="account.user.fullName"></p-sortIcon>
+                </div>
               </div>
-            </div>
-          </th>
-          <th pSortableColumn="inspectorGroupSize">
-            <div class="d-flex justify-content-between align-items-center">
-              <div>
-                Số người
-                <p-sortIcon field="inspectorGroupSize"></p-sortIcon>
+            </th>
+            <th pSortableColumn="inspectorGroupSize">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  Số người
+                  <p-sortIcon field="inspectorGroupSize"></p-sortIcon>
+                </div>
               </div>
-            </div>
-          </th>
-          <th pSortableColumn="isActive">
-            <div class="d-flex justify-content-between align-items-center">
-              <div>
-                Trạng thái
-                <p-sortIcon field="isActive"></p-sortIcon>
+            </th>
+            <th pSortableColumn="isActive">
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  Trạng thái
+                  <p-sortIcon field="isActive"></p-sortIcon>
+                </div>
               </div>
-            </div>
-          </th>
-          <th class="th-small"></th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-issue>
-        <tr class="p-selectable-row">
-          <td>
-            <span class="p-column-title">Id</span>
-            {{ issue.issueId }}
-          </td>
-          <td>
-            <span class="p-column-title">Tên kế hoạch kiểm tra</span>
-            <div
-              pTooltip="{{ issue.issueName }}"
-              tooltipPosition="top"
-              class="td-content"
+            </th>
+            <th class="th-small"></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-issue>
+          <tr class="p-selectable-row">
+            <td>
+              <span class="p-column-title">Id</span>
+              {{ issue.issueId }}
+            </td>
+            <td>
+              <span class="p-column-title">Tên kế hoạch kiểm tra</span>
+              <div
+                pTooltip="{{ issue.issueName }}"
+                tooltipPosition="top"
+                class="td-content"
+              >
+                {{ issue.issueName }}
+              </div>
+            </td>
+            <td class="td-createdby">
+              <span class="p-column-title">Người đăng</span>
+              {{ issue.account.user.fullName }}
+            </td>
+            <!-- <td>
+              <span class="p-column-title">Date</span>
+              {{ issue.createdDate | date : "dd/MM/yyyy" }}
+            </td> -->
+            <!-- <td>
+              <span class="p-column-title">Số lượng văn bản</span>
+              {{ issue.docNum }}
+            </td> -->
+            <td>
+              <span class="p-column-title">Số lượng BKTNB</span>
+              {{ issue.inspectorGroupSize }}
+            </td>
+            <td>
+              <p-tag
+                class="status"
+                [severity]="issue.isActive ? 'success' : 'danger'"
+                [rounded]="true"
+              >
+                {{ issue.isActive ? "Đang tiến hành" : "Kết thúc" }}
+              </p-tag>
+            </td>
+            <td
+              style="text-align: center"
+              class="d-flex td-action justify-content-center align-items-center"
             >
-              {{ issue.issueName }}
-            </div>
-          </td>
-          <td class="td-createdby">
-            <span class="p-column-title">Người đăng</span>
-            {{ issue.account.user.fullName }}
-          </td>
-          <!-- <td>
-            <span class="p-column-title">Date</span>
-            {{ issue.createdDate | date : "dd/MM/yyyy" }}
-          </td> -->
-          <!-- <td>
-            <span class="p-column-title">Số lượng văn bản</span>
-            {{ issue.docNum }}
-          </td> -->
-          <td>
-            <span class="p-column-title">Số lượng BKTNB</span>
-            {{ issue.inspectorGroupSize }}
-          </td>
-          <td>
-            <p-tag
-              class="status"
-              [severity]="issue.isActive ? 'success' : 'danger'"
-              [rounded]="true"
-            >
-              {{ issue.isActive ? "Đang tiến hành" : "Kết thúc" }}
-            </p-tag>
-          </td>
-          <td
-            style="text-align: center"
-            class="d-flex td-action justify-content-center align-items-center"
-          >
-            <div
-              pTooltip="Chi tiết"
-              tooltipPosition="top"
-              class="action-item d-flex justify-content-center align-items-center mx-2"
-              (click)="navigateToDetail(issue.issueId)"
-            >
-              <i class="bi bi-info-circle-fill"></i>
-            </div>
-            <div
-              pTooltip="Chỉnh sửa"
-              tooltipPosition="top"
-              class="action-item d-flex justify-content-center align-items-center mx-2"
-              (click)="navigateToUpdate(issue.issueId, issue.isActive)"
-              *ngIf="isDirector && issue.isActive"
-            >
-              <i class="bi bi-pencil-fill"></i>
-            </div>
-          </td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="emptymessage">
-        <tr>
-          <td colspan="6">
-            <p class="w-100 text-center mt-4 fw-medium fs-4">
-              Không tìm thấy kế hoạch kiểm tra phù hợp
-            </p>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
-</ng-container>
+              <div
+                pTooltip="Chi tiết"
+                tooltipPosition="top"
+                class="action-item d-flex justify-content-center align-items-center mx-2"
+                (click)="navigateToDetail(issue.issueId)"
+              >
+                <i class="bi bi-info-circle-fill"></i>
+              </div>
+              <div
+                pTooltip="Chỉnh sửa"
+                tooltipPosition="top"
+                class="action-item d-flex justify-content-center align-items-center mx-2"
+                (click)="navigateToUpdate(issue.issueId, issue.isActive)"
+                *ngIf="isDirector && issue.isActive"
+              >
+                <i class="bi bi-pencil-fill"></i>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="6">
+              <p class="w-100 text-center mt-4 fw-medium fs-4">
+                Không tìm thấy kế hoạch kiểm tra phù hợp
+              </p>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </ng-container>
+</div>
